# MCTDH_analyze

./: CMakeLists.txt  main.f90  norm.f90
example_input/nocl1/: alloc  auto  check  cross_nocl0  den1d_f1  dvr  gridpop  input  log  oper  output  psi  restart  speed  steps  timing  update
include/: daten.f90  global.f90  griddat.f90  psidef.f90
lib/linear/: mmlib.f90  mtlib.f90  op1lib.f90  xvlib.f90
note/: code idea.md  code structure.md  code to analyze MCTDH psi file.md  output.html  output_cont.html  output_docu.html
read_psi/: rdpsi.f90  read_psi_wavefunc.f90
read_psi/read_psiinfo/: rddvrdef.f90  rdgrddef.f90  rdpsidef.f90  rdpsiinfo.f90
utility/: error_handling.f90
